--- a/src/App.css
+++ b/src/App.css
@@ -1,113 +1,159 @@
-*,*::after,*::before{
-  box-sizing: border-box;
+*,
+*::after,
+*::before {
+  box-sizing : border-box;
   font-family: Gotham Rounded, sans-serif;
-  
+
 
 }
+
 body {
-  background: rgb(238, 235, 235);
-  display: flex;
+  background     : rgb(238, 235, 235);
+  display        : flex;
   justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  overflow: hidden;
+  align-items    : center;
+  min-height     : 100vh;
+  overflow       : hidden;
+  width          : 100%;
 }
 
 .clock {
-  width: 300px;
-  height: 300px;
+  width           : 300px;
+  height          : 300px;
   background-color: rgba(230, 57, 57, 0.8);
   /* rgba(255,255,255,0.8) */
-  border-radius: 50%;
-  border: 4px solid rgba(230, 57, 57, 0.8);
-  box-shadow:  -8px 8px 15px rgba(225,225,225,0.05),
-       20px 20px 20px rgba(0,0,0,0.2),
-       inset -8px -8px 15px rgba(225,225,225,0.05),
-       inset 20px 20px 20px rgba(0,0,0,0.2);
+  border-radius   : 50%;
+  border          : 4px solid rgba(230, 57, 57, 0.8);
+  box-shadow      : -8px 8px 15px rgba(225, 225, 225, 0.05),
+    20px 20px 20px rgba(0, 0, 0, 0.2),
+    inset -8px -8px 15px rgba(225, 225, 225, 0.05),
+    inset 20px 20px 20px rgba(0, 0, 0, 0.2);
   position: relative;
- 
+  margin  : 30px;
 }
+
 .clock::after {
-  content: '';
-  height: 30px;
-  width: 30px;
-  border-radius: 50%;
+  content         : '';
+  height          : 30px;
+  width           : 30px;
+  border-radius   : 50%;
   background-color: black;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
-  z-index: 11;
+  position        : absolute;
+  top             : 50%;
+  left            : 50%;
+  transform       : translateX(-50%) translateY(-50%);
+  z-index         : 11;
 }
 
 .clock .number {
-  --roation: 0;
-  position: absolute;
-  width: 100%;
-  height: 100%;
+  --roation : 0;
+  position  : absolute;
+  width     : 100%;
+  height    : 100%;
   text-align: center;
-  transform: rotate(var(--roation));
- 
+  transform : rotate(var(--roation));
+
   font-size: 1.5rem;
- padding: 18px;
+  padding  : 18px;
 }
 
-.number::before{
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 5px;
-  height: 15px;
+.number::before {
+  content         : '';
+  position        : absolute;
+  top             : 0;
+  left            : 50%;
+  transform       : translateX(-50%);
+  width           : 5px;
+  height          : 15px;
   background-color: black;
 }
 
-.clock .number1 {--roation: 30deg}
-.clock .number2 {--roation: 60deg}
-.clock .number3 {--roation: 90deg}
-.clock .number4 {--roation: 120deg}
-.clock .number5 {--roation: 150deg}
-.clock .number6 {--roation: 180deg}
-.clock .number7 {--roation: 210deg}
-.clock .number8 {--roation: 240deg}
-.clock .number9 {--roation: 270deg}
-.clock .number10 {--roation: 300deg}
-.clock .number11 {--roation: 330deg}
+.clock .number1 {
+  --roation: 30deg
+}
 
-.number1 div{
+.clock .number2 {
+  --roation: 60deg
+}
+
+.clock .number3 {
+  --roation: 90deg
+}
+
+.clock .number4 {
+  --roation: 120deg
+}
+
+.clock .number5 {
+  --roation: 150deg
+}
+
+.clock .number6 {
+  --roation: 180deg
+}
+
+.clock .number7 {
+  --roation: 210deg
+}
+
+.clock .number8 {
+  --roation: 240deg
+}
+
+.clock .number9 {
+  --roation: 270deg
+}
+
+.clock .number10 {
+  --roation: 300deg
+}
+
+.clock .number11 {
+  --roation: 330deg
+}
+
+.number1 div {
   transform: rotate(-30deg);
 }
 
-.number2 div{
+.number2 div {
   transform: rotate(-60deg);
 }
-.number3 div{
+
+.number3 div {
   transform: rotate(-90deg);
 }
-.number4 div{
+
+.number4 div {
   transform: rotate(-120deg);
 }
-.number5 div{
+
+.number5 div {
   transform: rotate(-150deg);
 }
-.number6 div{
+
+.number6 div {
   transform: rotate(-180deg);
-  
+
 }
-.number7 div{
+
+.number7 div {
   transform: rotate(-210deg);
 }
-.number8 div{
+
+.number8 div {
   transform: rotate(-240deg);
 }
-.number9 div{
+
+.number9 div {
   transform: rotate(-270deg);
 }
-.number10 div{
+
+.number10 div {
   transform: rotate(-300deg);
 }
-.number11 div{
+
+.number11 div {
   transform: rotate(-330deg);
 }
 
@@ -115,39 +161,189 @@ body {
 .clock .hand {
   /* --roation:0; */
   position: absolute;
-  bottom: 50%;
-  left: 50%;
-  
-  border: 1px solid white;
+  bottom  : 50%;
+  left    : 50%;
+
+  border                 : 1px solid white;
   border-top-right-radius: 10px;
-  border-top-left-radius: 10px;
-  background-color: black;
-  transform-origin: bottom;
-  /* transform: translate(-50%) rotate(calc(var(--roation)* 1deg)); */
-  z-index: 10;
+  border-top-left-radius : 10px;
+  background-color       : black;
+  transform-origin       : bottom;
+  /* transform           : translate(-50%) rotate(calc(var(--roation)* 1deg)); */
+  z-index                : 10;
 }
 
 .clock .hand.second {
-  width: 5px;
-  height: 45%;
+  width           : 5px;
+  height          : 45%;
   background-color: red;
 }
+
 .clock .hand.minute {
-  width: 7px;
-  height: 40%;
-  background-color: black;
-}
-.clock .hand.hour {
-  width: 10px;
-  height: 30%;
+  width           : 7px;
+  height          : 40%;
   background-color: black;
 }
 
-.Digital_clock
-{
-  /* border: 2px black solid; */
-  margin: auto;
-  text-align: center;
-  font-size: 40px;
-  color: blue;
+.clock .hand.hour {
+  width           : 10px;
+  height          : 30%;
+  background-color: black;
 }
+
+.Digital_clock {
+  /* border: 2px black solid; */
+  margin    : auto;
+  text-align: center;
+  font-size : 40px;
+  color     : blue;
+}
+
+/* #search {
+  float        : right;
+  border       : none;
+  border-bottom: 2px black solid;
+  width        : 142px;
+  height       : 20px;
+  border-radius: 7px;
+  outline      : none;
+  position     : fixed;
+} */
+
+.infinite-scroll-component {
+  width: 100% !important;
+}
+
+.compare {
+  /* border               : 2px black solid; */
+  height               : auto;
+  /* display           : grid; */
+  display              : grid;
+  grid-template-columns: auto auto;
+}
+
+.first {
+  border-right: 2px black solid;
+}
+
+.second {
+  text-align: center;
+}
+
+.zonename {}
+
+.image {
+  width: 10%;
+}
+
+.clocks {
+  width: 50%;
+}
+
+.button {
+  border             : none;
+  color              : white;
+  padding            : 3px 0px;
+  text-align         : center;
+  text-decoration    : none;
+  display            : inline-block;
+  /* font-size       : 16px; */
+  margin             : 10px 20px;
+  transition-duration: 0.4s;
+  cursor             : pointer;
+  border-radius      : 26px;
+  font-weight        : bold;
+  width              : 20%;
+  float              : right;
+}
+
+.button1 {
+  background-color: white;
+  color           : black;
+  border          : 2px solid #4CAF50;
+}
+
+.button1:hover {
+  background-color: #f44336;
+  color           : white;
+}
+
+.R1 {
+  font-size      : 20px;
+  margin         : 10px;
+  text-align     : center;
+  /* font-variant: ruby; */
+  font-weight    : bold;
+}
+
+.R2 {
+  font-size      : 20px;
+  margin         : 10px;
+  text-align     : center;
+  /* font-variant: ruby; */
+  font-weight    : bold;
+}
+
+#search {
+  -webkit-align-items    : center;
+  -webkit-box-align      : center;
+  -ms-flex-align         : center;
+  align-items            : center;
+  background-color       : hsl(0, 0%, 100%);
+  border-color           : hsl(0, 0%, 80%);
+  border-radius          : 4px;
+  border-style           : solid;
+  border-width           : 1px;
+  cursor                 : default;
+  display                : -webkit-box;
+  display                : -webkit-flex;
+  display                : -ms-flexbox;
+  display                : flex;
+  -webkit-box-flex-wrap  : wrap;
+  -webkit-flex-wrap      : wrap;
+  -ms-flex-wrap          : wrap;
+  flex-wrap              : wrap;
+  -webkit-box-pack       : justify;
+  -webkit-justify-content: space-between;
+  justify-content        : space-between;
+  min-height             : 38px;
+  outline                : 0 !important;
+  position               : relative;
+  -webkit-transition     : all 100ms;
+  transition             : all 100ms;
+  box-sizing             : border-box;
+  width                  : 70%;
+  margin-top             : 15px;
+}
+
+
+/* .css-yk16xz-control {
+  -webkit-align-items    : center;
+  -webkit-box-align      : center;
+  -ms-flex-align         : center;
+  align-items            : center;
+  background-color       : hsl(0, 0%, 100%);
+  border-color           : hsl(0, 0%, 80%);
+  border-radius          : 4px;
+  border-style           : solid;
+  border-width           : 1px;
+  cursor                 : default;
+  display                : -webkit-box;
+  display                : -webkit-flex;
+  display                : -ms-flexbox;
+  display                : flex;
+  -webkit-box-flex-wrap  : wrap;
+  -webkit-flex-wrap      : wrap;
+  -ms-flex-wrap          : wrap;
+  flex-wrap              : wrap;
+  -webkit-box-pack       : justify;
+  -webkit-justify-content: space-between;
+  justify-content        : space-between;
+  min-height             : 38px;
+  outline                : 0 !important;
+  position               : relative;
+  -webkit-transition     : all 100ms;
+  transition             : all 100ms;
+  box-sizing             : border-box;
+  width                  : 70% !important;
+} */
